--- a/src/AccountOwnerServer/appsettings.json
+++ b/src/AccountOwnerServer/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "mysqlconnection": {
+    "connectionString": "server=localhost;port=13309;userid=root;database=AccountOwner;"
+  }
 }
