--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,33 +4,24 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
-       {
-           "name": ".NET Core Launch (AccountOwnerServer)",
-           "type": "coreclr",
-           "request": "launch",
-           "preLaunchTask": "buildAccountOwner",
-           "program": "${workspaceFolder}/src/AccountOwnerServer/bin/Debug/netcoreapp2.1/AccountOwnerServer.dll",
-           "args": [],
-           "cwd": "${workspaceFolder}/src/AccountOwnerServer",
-           "stopAtEntry": false,
-           "console": "internalConsole"
-       },
-       {
-           "name": ".NET Core Launch (webapi)",
-           "type": "coreclr",
-           "request": "launch",
-           "preLaunchTask": "build",
-           "program": "${workspaceFolder}/src/AccountOwnerServer/bin/Debug/netcoreapp2.1/AccountOwnerServer.dll",
-           "args": [],
-           "cwd": "${workspaceFolder}/src/AccountOwnerServer",
-           "stopAtEntry": false,
-           "env": {
-               "ASPNETCORE_ENVIRONMENT": "Development"
-           },
-           "sourceFileMap": {
-               "/Views": "${workspaceFolder}/Views"
-           }
-       },
+        {
+            "name": ".NET Core Launch (AccountOwnerServer)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "buildAccountOwner",
+            "program": "${workspaceFolder}/src/AccountOwnerServer/bin/Debug/netcoreapp2.1/AccountOwnerServer.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/src/AccountOwnerServer",
+            "stopAtEntry": false,
+            "console": "internalConsole"
+        },
+        {
+            "type": "PowerShell",
+            "request": "launch",
+            "name": "Start DB Container",
+            "script": "${workspaceFolder}/scripts/run.db.ps1",
+            "cwd": "${workspaceFolder}"
+        },
         {
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
@@ -69,5 +60,11 @@
             "request": "attach",
             "processId": "${command:pickProcess}"
         }
-    ,]
+    ,],
+    "compounds": [
+        {
+            "name": "DB Container/AccountOwnerServer WEB API",
+            "configurations": ["Start DB Container", ".NET Core Launch (AccountOwnerServer)"]
+        }
+    ]
 }
